Create Weather.css file

--- a/src/App.css
+++ b/src/App.css
@@ -1,103 +1,5 @@
-.currentWeather {
-  text-align: center;
-  margin-top: 100px;
-}
-.weekWeather {
-  text-align: center;
-  margin-top: 10px;
-  height: 180px;
-}
-.weekWeather :hover {
-  background-color: #dddddd;
-  border-radius: 10px;
-  padding-top: 10px;
-}
-.date {
-  text-align: center;
-  margin-top: 30px;
-}
-.fa-circle {
-  font-size: 100px;
-  color: #ff6372;
-}
-.fa-cloud {
-  font-size: 100px;
-  color: #ff6372;
-}
-.fa-cloud-showers-heavy {
-  font-size: 100px;
-  color: #ff6372;
-}
-.fa-snowflake {
-  font-size: 100px;
-  color: #ff6372;
-}
-.precipitation {
-  text-align: center;
-  margin-top: 30px;
-}
-
-.temperature {
-  color: slategrey;
-  font-size: 60px;
-}
-
-.cloudy {
-  width: 60%;
-}
-.sunny {
-  width: 65%;
-}
-
-.iconify {
-  width: 50px;
-  color: #6c63ff;
-}
-
-.box-wrap {
-  border: 1px solid #dfe1e6;
+.App {
   max-width: 650px;
-  height: 650px;
-  border-radius: 8px;
-  line-height: 16.8px;
-  padding: 20px 16px 20px 16px;
-  text-align: left;
-  margin: auto;
-  margin-top: 20px;
-  background-color: #fde9e0;
-}
-h1 {
-  font-family: "Noto Sans HK", sans-serif;
-  font-size: 50px;
-  margin-bottom: 0px;
-  text-transform: capitalize;
-}
-h4 {
-  color: #ff6372;
-  margin-top: 0px;
-}
-h5 {
-  margin-bottom: 10px;
-}
-.footer {
-  margin-left: 600px;
-}
-#name {
-  color: #ff6372;
-}
-#source {
-  color: #ff6372;
-  margin-left: 625px;
-}
-
-.active {
-  color: slategrey;
-  cursor: default;
-}
-.active:hover {
-  text-decoration: none;
-}
-.weather-icon {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 0px auto;
+  margin: 20px auto;
 }
